# magwork

./: .gitignore  LICENSE  Pipfile  README.md  main.ipynb  pictures.ipynb
code/: Pipfile  main.ipynb  main.py  pictures.ipynb  tables.ipynb
code/cec2013lsgo/: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
code/cec2013lsgo/cec2013lsgo/: Makefile  README.md  cec2013.cpp  cec2013.pyx  eval_func.cpp
code/niapy/: .gitignore  Pipfile  ccalgorithm.py  main.ipynb  main.py
code/niapy/niapy/: task.py
code/niapy/niapy/algorithms/: algorithm.py
code/niapy/niapy/algorithms/analysis/: __init__.py  rdg.py
code/niapy/niapy/algorithms/basic/: pso.py
environment/: Makefile  env.def
examples/: run_rdgv1.py
niapy/algorithms/: algorithm.py
niapy/algorithms/basic/: ca.py  de.py
paper/: Makefile  Pipfile  deljenje_besed.tex  literatura.bib  main.abstract.tex  main.content.tex  main.kratice.tex  main.povzetek.tex  main.tex
paper/res/: algs.tex
